--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,15 +13,15 @@
           <!-- Customerログイン時のヘッダー -->
           <% if customer_signed_in? && !admin_signed_in? %>
              <li class="nav-item">
-              ようこそ、<#%= @customer.last_name %><#%= @customer.first_name %>さん！
+              ようこそ、<%= @customer.last_name %><#%= @customer.first_name %>さん！
             </li>
 
             <li class="nav-item">
-              <#%= link_to 'マイページ', customers_my_page_path, class: "nav_button" %>
+              <%= link_to 'マイページ', customers_my_page_path, class: "nav_button" %>
             </li>
 
             <li class="nav-item">
-              <#%= link_to '商品一覧', items_path, class: "nav_button" %>
+              <%= link_to '商品一覧', items_path, class: "nav_button" %>
             </li>
 
             <li class="nav-item">
@@ -35,7 +35,7 @@
           <!-- Adminログイン時のヘッダー -->
           <% elsif admin_signed_in? %>
             <li class="nav-item">
-              <#%= link_to '商品一覧', admin_items_path, class: "nav_button" %>
+              <%= link_to '商品一覧', admin_items_path, class: "nav_button" %>
             </li>
 
             <li class="nav-item">
@@ -47,7 +47,7 @@
             </li>
 
             <li class="nav-item">
-              <#%= link_to 'ジャンル一覧', admin_genres_path, class: "nav_button" %>
+              <%= link_to 'ジャンル一覧', admin_genres_path, class: "nav_button" %>
             </li>
 
             <li class="nav-item">
@@ -61,7 +61,7 @@
             </li>
 
             <li class="nav-item">
-              <#%= link_to '商品一覧', items_path, class: "nav_button" %>
+              <%= link_to '商品一覧', items_path, class: "nav_button" %>
             </li>
 
             <li class="nav-item">
