--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,101 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row" style="margin: 20px;">
+    <div class="col-lg-12 d-flex align-items-center justify-content-between">
+      <div class="title-background" style="background-color: #f0f0f0; padding: 0px 20px; border-radius: 4px;">
+        <h4 style="margin: 0;">新規会員登録</h4>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th><%= f.label :name, "名前" %></th>
+              <td>
+                <div class="row">
+                  <div class="col-md-6">
+                    <%= f.label :last_name, "(姓)" %>
+                    <%= f.text_field :last_name, autofocus: true, class: "form-control", placeholder: "姓", style: "width: 200px;" %>
+                  </div>
+                  <div class="col-md-6">
+                    <%= f.label :first_name, "(名)" %>
+                    <%= f.text_field :first_name, class: "form-control", placeholder: "名", style: "width: 200px;" %>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <th><%= f.label :kana, "フリガナ" %></th>
+              <td>
+                <div class="row">
+                  <div class="col-md-6">
+                    <%= f.label :last_name_kana, "(セイ)" %>
+                    <%= f.text_field :last_name_kana, autofocus: true, class: "form-control", placeholder: "セイ", style: "width: 200px;" %>
+                  </div>
+                  <div class="col-md-6">
+                    <%= f.label :first_name_kana, "(メイ)" %>
+                    <%= f.text_field :first_name_kana, class: "form-control", placeholder: "メイ", style: "width: 200px;" %>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <th><%= f.label :email, "メールアドレス" %></th>
+              <td><%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "sample@example.com", style: "width: 200px;" %></td>
+            </tr>
+            <tr>
+              <th><%= f.label :post_code, "郵便番号（ハイフンなし）" %></th>
+              <td><%= f.text_field :post_code, class: "form-control", placeholder: "0000000", style: "width: 200px;" %></td>
+            </tr>
+            <tr>
+              <th><%= f.label :address, "住所" %></th>
+              <td><%= f.text_area :address, class: "form-control", placeholder: "東京都渋谷区代々木神園町0-0", style: "width: 600px;" %></td>
+            </tr>
+            <tr>
+              <th><%= f.label :phone_number, "電話番号（ハイフンなし）" %></th>
+              <td><%= f.text_field :phone_number, class: "form-control", placeholder: "00000000000", style: "width: 200px;" %></td>
+            </tr>
+            <tr>
+              <th><%= f.label :password, "パスワード" %>
+                <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %>文字以上)</em>
+                <% end %>
+              </th>
+              <td><%= f.password_field :password, autocomplete: "new-password", class: "form-control", style: "width: 200px;" %></td>
+            </tr>
+            <tr>
+              <th><%= f.label :password_confirmation, "パスワード(確認用)" %></th>
+              <td><%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", style: "width: 200px;" %></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td><%= f.submit "新規登録", class: "btn btn-success", style: "padding: 5px 60px;" %></td>
+            </tr>
+          </tbody>
+        </table>
+      <% end %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="row" style="margin: 20px;">
+        <div class="col-lg-12 d-flex align-items-center justify-content-between">
+          <div class="title-background" style="background-color: #f0f0f0; padding: 0px 20px; border-radius: 4px;">
+            <h4 style="margin: 0;">既に登録済みの方</h4>
+          </div>
+        </div>
+      </div>
 
-<%= render "public/shared/links" %>
+      <div class="row">
+        <div class="col-lg-12">
+          <p>
+            <%= link_to "こちら", new_user_session_path, style: "text-decoration: underline;" %>
+            からログインしてください。
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
