--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -91,7 +91,7 @@
       <div class="row">
         <div class="col-lg-12">
           <p>
-            <%= link_to "こちら", new_user_session_path, style: "text-decoration: underline;" %>
+            <%= link_to "こちら", new_customer_session_path, style: "text-decoration: underline;" %>
             からログインしてください。
           </p>
         </div>
