--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
             </li>
 
             <li class="nav-item">
-              <#%= link_to 'カート', cart_items_path, class: "nav_button" %>
+              <%= link_to 'カート', cart_items_path, class: "nav_button" %>
             </li>
 
             <li class="nav-item">
@@ -43,7 +43,7 @@
             </li>
 
             <li class="nav-item">
-              <#%= link_to '注文履歴一覧', admin_top_path, class: "nav_button" %>
+              <%= link_to '注文履歴一覧', admin_top_path, class: "nav_button" %>
             </li>
 
             <li class="nav-item">
