--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,8 @@
-<%# 動的フッターの部分テンプレートファイル%>
-<footer class="bg-custom">
-  <div class = "container">
-    <div class = "row">
-      <div class = "mx-auto">
-        <p></p>
+<footer class="bg-dark text-white">
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="mx-auto">
+        <p>CopyRight Nagano_cake.inc</p>
       </div>
     </div>
   </div>
