--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,15 @@
-<%# 動的ヘッダーの部分テンプレートファイル %>
 <header>
-  <nav class = "navbar navbar-expand-lg bg-custom ">
-    <div class = container>
-
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-
+        <ul class="navbar-nav d-flex flex-wrap w-100 justify-content-between">
+      
           <!-- Customerログイン時のヘッダー -->
           <% if customer_signed_in? && !admin_signed_in? %>
-             <li class="nav-item">
+             <li class="nav-item text-white">
               ようこそ、<%= @customer.last_name %><%= @customer.first_name %>さん！
             </li>
 
