--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,14 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">  
     <%= render "layouts/header" %>
     <% flash.each do |message_type, message| %>
       <div class="flash-message <%= message_type %>"><%= message %></div>
     <% end %>
-    <%= yield %>
+    <main class="flex-grow-1">
+      <%= yield %>
+    </main>
     <%= render "layouts/footer" %>  
-  </body>
+  </body> 
 </html>
