--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -70,7 +70,7 @@
     <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
   <% end %>
 
-  <div class="row" style="margin-bottom: 200px;">
+  <div class="row">
     <div class="col-lg-12 d-flex justify-content-center">
        <% if @cart_items.present? %>
           <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
