--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,20 +1,33 @@
-<div class='container-fluid container-sidber'>
-  <div class='row no-gutters  bg-white'>
-    <div class='col-md-2 bg-custom-sidebar'>
-    </div>
-    <div class='col-md-10'>
-      <div class="row">
-        <div class='col-md-12 mx-auto text-center'>
-          <img src="/assets/top_image.webp" class="img-fluid" alt="">
-        </div>
-      </div>
+<div class="container-fluid p-0">
+  <img src="/assets/top_image.webp" class="img-fluid w-100" alt="">
+</div>
 
-      <div class="row">
-        <div class='col-md-12 mx-auto'>
-          <h3 style="margin: 20px; text-start"><strong>新着商品</strong></h3>
-          <div class="row">
+<div class="container bg-white">
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="my-4 text-start"><strong>新着商品</strong></h3>
+    </div>
+  </div>
+
+  <div class="row">
+    <% @items_new.each do |item| %>
+      <div class="col-md-3">
+        <div class="card border-0 mx-auto mt-4" style="height: auto;">
+          <div class="card-body py-0">
+            <%= link_to item_path(item) do %>
+              <%= image_tag item.get_image(300, 300), class: "card-img-top" %>
+            <% end %>
+            <p class="card-title"><%= item.name %></p>
+            <p class="card-text">¥<%= number_with_delimiter(item.price_excluding_tax) %></p>
+          </div>
         </div>
       </div>
+    <% end %>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12 text-end my-4">
+      <%= link_to 'すべての商品を見る＞', items_path, style: 'text-decoration: underline;' %>
     </div>
   </div>
 </div>
