--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,11 @@
               <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav_button" %>
             </li>
 
+            <li class="nav-item">
+              <!-- 検索フォーム表示 --> 
+              <%= render 'public/searches/form' %>           
+            </li>     
+             
           <!-- Adminログイン時のヘッダー -->
           <% elsif admin_signed_in? %>
             <li class="nav-item">
@@ -71,14 +76,6 @@
 
           <% end %>
         </ul>
-
-        <!-- 検索フォーム表示 -->
-        <div class="serch_form">
-          <%= form_with url: "#" do |form| %>
-            <%= form.text_field :keyword, placeholder: "search" %>
-            <%= form.submit "🔎" %>
-          <% end %>
-        </div>
 
       </div>
     </div>
