--- a/app/views/public/searches/_form.html.erb
+++ b/app/views/public/searches/_form.html.erb
@@ -1,11 +1,20 @@
 <% if customer_signed_in? %>
-  <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.text_field :content %>
-    <%= f.select :model, options_for_select({"会員" => "customer", "商品" => "item"}) %>
-    <%= f.select :method, options_for_select({"完全一致" => "perfect", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partial"}) %>
-    <%= button_tag type: "submit", class: "btn btn-light p-0 m-0" do %>
-      <i class="fa-solid fa-magnifying-glass"></i>
-      <p>検索</P>
-    <% end %>
-  <% end %> 
+  <form action="/search" method="get" style="display:flex; gap:8px;">
+    <input type="text" name="keyword" placeholder="検索キーワード" value="<%= params[:keyword] %>">
+
+    <select name="target">
+      <option value="item" <%= 'selected' if params[:target] == 'item' %>>商品</option>
+      <option value="customer" <%= 'selected' if params[:target] == 'customer' %>>会員</option>
+    </select>
+
+    <select name="match_type">
+      <option value="exact" <%= 'selected' if params[:match_type] == 'exact' %>>完全一致</option>
+      <option value="partial" <%= 'selected' if params[:match_type] == 'partial' %>>部分一致</option>
+      <option value="forward" <%= 'selected' if params[:match_type] == 'forward' %>>前方一致</option>
+      <option value="backward" <%= 'selected' if params[:match_type] == 'backward' %>>後方一致</option>
+    </select>
+
+    <button type="submit">検索</button>
+  </form>
+
 <% end %>
