--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,17 +1,22 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <% if @records.present? %>
-        <% if @model == 'customer' %>
-          <h4><strong><%= @content %>の検索結果一覧</strong></h4>
-            <%= render 'public/customers/index', customers: @records %>
-        <% elsif @model == 'item' %>
-          <h4><strong><%= @content %>の検索結果一覧</strong></h4>
-            <%= render 'public/items/index', items: @records %>
-        <% end %>
+      <h4><strong>検索結果</strong></h4>
+      <% if @results.any? %>
+        <ul>
+          <% @results.each do |result| %>
+            <li>
+              <% if params[:target] == 'item' %>
+                商品名: <%= result.name %>
+              <% else %>
+                会員名: <%= result.last_name %> <%= result.first_name %>
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
       <% else %>
-        <h4><strong>検索結果がありません</strong></h4>
-      <% end %>            
+        <p>該当するデータが見つかりませんでした。</p>
+      <% end %>
     </div>
   </div>
 </div>
