--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,6 +56,11 @@
               <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: "nav_button" %>
             </li>
 
+            <li class="nav-item">
+              <!-- 検索フォーム表示 -->
+              <%= render 'admin/searches/form' %>
+            </li>  
+
           <!-- 非ログイン時のヘッダー -->
           <% else %>
             <li class="nav-item">
