--- a/app/views/admin/customers/_index.html.erb
+++ b/app/views/admin/customers/_index.html.erb
@@ -22,7 +22,7 @@
           <% @customers.each do |customer| %>
             <tr>
               <td><%= customer.id %></td>
-              <td><%= link_to "#{customer.last_name} #{customer.first_name}", customers_my_page_path(customer), style: "color: black; text-decoration: underline;" %></td>
+              <td><%= link_to "#{customer.last_name} #{customer.first_name}", admin_customer_path(customer), style: "color: black; text-decoration: underline;" %></td>
               <td><%= customer.email %></td>
               <% if customer.is_active? %>
                 <td class="text-success" style="font-weight: bold;">有効</td>
