--- a/app/views/admin/searches/search.html.erb
+++ b/app/views/admin/searches/search.html.erb
@@ -1,22 +1,19 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
-      <h4><strong>検索結果</strong></h4>
-      <% if @results.any? %>
-        <ul>
-          <% @results.each do |result| %>
-            <li>
-              <% if params[:target] == 'item' %>
-                商品名: <%= result.name %>
-              <% else %>
-                会員名: <%= result.last_name %> <%= result.first_name %>
-              <% end %>
-            </li>
-          <% end %>
-        </ul>
+    <div class="col-lg-12"  style="margin: 40px 0;">
+      <div class="title-background" style="background-color: #f0f0f0; padding: 0px 20px; border-radius: 4px; display: inline-block;">
+        <h4 style="margin: 0;"> 検索結果一覧</h4>
+      </div>
+
+      <% if @items.present? %>
+        <%= render partial: 'admin/items/index', locals: { items: @items } %>
+      <% elsif @customers.present? %>
+        <%= render partial: 'admin/customers/index', locals: { customers: @customers } %>
       <% else %>
-        <p>該当するデータが見つかりませんでした。</p>
+        <p>該当するデータはありません。</p>
       <% end %>
+
     </div>
   </div>
 </div>
+
