--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,10 @@
             </li>
 
             <li class="nav-item">
+              <%= link_to 'ホーム', root_path, class: "nav_button" %>
+            </li>
+
+            <li class="nav-item">
               <%= link_to 'マイページ', customers_my_page_path, class: "nav_button" %>
             </li>
 
@@ -36,6 +40,10 @@
              
           <!-- Adminログイン時のヘッダー -->
           <% elsif admin_signed_in? %>
+            <li class="nav-item">
+              <%= link_to 'ホーム', root_path, class: "nav_button" %>
+            </li>
+
             <li class="nav-item">
               <%= link_to '商品一覧', admin_items_path, class: "nav_button" %>
             </li>
