--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,6 +45,10 @@
             </li>
 
             <li class="nav-item">
+              <%= link_to 'クーポン一覧', admin_coupons_path, class: "nav_button" %>
+            </li>
+
+            <li class="nav-item">
               <%= link_to '商品一覧', admin_items_path, class: "nav_button" %>
             </li>
 
