--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -15,6 +15,7 @@
             <th>注文日</th>
             <th>配送先</th>
             <th>注文商品</th>
+            <th>クーポン割引額</th>
             <th>支払金額</th>
             <th>ステータス</th>
             <th>注文詳細</th>
@@ -36,6 +37,7 @@
                   <% end %>
                 </ul>
               </td>
+              <td><%= order.discount_price || 0 %>円</td>
               <td><%= number_with_delimiter(order.total_price) %>円</td>
               <td><%= order.status_i18n %></td>
               <td><%= link_to "表示する", order_path(order.id), class: "btn btn-sm btn-primary" %></td>
