--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -37,7 +37,13 @@
                   <% end %>
                 </ul>
               </td>
-              <td><%= order.discount_price || 0 %>円</td>
+              <td>
+                <% if order.discount_price.present? && order.discount_price > 0 %>
+                  <%= number_to_currency(order.discount_price) %>
+                <% else %>
+                  - 
+                <% end %>
+              </td>
               <td><%= number_with_delimiter(order.total_price) %>円</td>
               <td><%= order.status_i18n %></td>
               <td><%= link_to "表示する", order_path(order.id), class: "btn btn-sm btn-primary" %></td>
