--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,10 @@
             </li>
 
             <li class="nav-item">
+              <%= link_to 'ランキング', ranking_items_path, class: "nav_button" %>
+            </li>
+
+            <li class="nav-item">
               <%= link_to 'カート', cart_items_path, class: "nav_button" %>
             </li>
 
