--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,6 +30,10 @@
             </li>
 
             <li class="nav-item">
+              <%= link_to '商品比較', comparisons_path, class: "nav_button" %>
+            </li>
+
+            <li class="nav-item">
               <%= link_to 'カート', cart_items_path, class: "nav_button" %>
             </li>
 
