--- a/app/views/public/comparisons/index.html.erb
+++ b/app/views/public/comparisons/index.html.erb
@@ -1,26 +1,34 @@
-<h1>比較リスト</h1>
+<div class="container">
+  <div class="row" style="margin: 40px 0;">
+    <div class="col-lg-12 d-flex align-items-center justify-content-between">
+      <div class="title-background" style="background-color: #f0f0f0; padding: 0px 20px; border-radius: 4px;">
+        <h4 style="margin: 0;">商品比較リスト</h4>
+      </div>
+    </div>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>商品名</th>
-      <th>価格</th>
-      <th>ジャンル</th>
-      <th>説明</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @compared_items.each do |item| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= item.name %></td>
-        <td><%= item.price_excluding_tax %>円</td>
-        <td><%= item.genre.name %></td>
-        <td><%= item.introduction %></td>
-        <td>
-          <%= button_to '削除', remove_comparison_path(item_id: item.id), method: :delete %>
-        </td>
+        <th>商品名</th>
+        <th>価格</th>
+        <th>ジャンル</th>
+        <th>説明</th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @compared_items.each do |item| %>
+        <tr>
+          <td><%= item.name %></td>
+          <td><%= item.price_excluding_tax %>円</td>
+          <td><%= item.genre.name %></td>
+          <td><%= item.introduction %></td>
+          <td>
+            <%= link_to '削除する', remove_comparison_path(item_id: item.id), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger" %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
