--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -27,12 +27,11 @@
       <!-- 再入荷通知希望ボタン -->
       <% if @item.stock == 0 %>
         <% if current_customer.restock_requests.exists?(item_id: @item.id) %>
-          <%= button_to '通知を解除', restock_request_path(@item), method: :delete %>
+          <%= button_to '通知を解除する', item_restock_request_path(@item), method: :delete, class: "btn btn-primary" %>
         <% else %>
-          <%= button_to '再入荷通知を希望', restock_requests_path(item_id: @item.id), method: :post %>
+          <%= button_to '再入荷通知を希望する', item_restock_request_path(item_id: @item.id), method: :post, class: "btn btn-primary" %>
         <% end %>
       <% end %>
-
 
       <!-- お気に入りボタン -->
       <% if customer_signed_in? %>
