--- a/app/views/public/notifications/index.html.erb
+++ b/app/views/public/notifications/index.html.erb
@@ -3,7 +3,13 @@
 <% @notifications.each do |notification| %>
   <div class="<%= 'unread' unless notification.read %>">
     <p><%= notification.message %></p>
-    <%= link_to '商品ページへ', item_path(notification.item) %>
+
+    <% if notification.item.present? %>
+      <%= link_to '商品ページへ', item_path(notification.item) %>
+    <% else %>
+      <p>商品情報が存在しません</p>
+    <% end %>
+
     <% unless notification.read %>
       <%= button_to '既読にする', notification_path(notification), method: :patch %>
     <% end %>
