--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,10 @@
             </li>
 
             <li class="nav-item">
+              <%= link_to '再入荷通知', notifications_path, class: "nav_button" %>
+            </li>
+
+            <li class="nav-item">
               <%= link_to 'カート', cart_items_path, class: "nav_button" %>
             </li>
 
