--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -42,16 +42,10 @@
                   </td>
                 </tr>
                 <tr>
-                  <th> 在庫数: <%= @item.stock %></th>               
-                    <%= form_with model: @item, url: admin_item_path(@item), method: :patch, local: true do |f| %>
-                      <td>
-                        <%= f.label :stock, "在庫を更新する" %>
-                        <%= f.number_field :stock, min: 0 %>
-                      </td>
-                      <td>
-                        <%= f.submit "在庫を更新" %>
-                      </td>
-                    <% end %>
+                  <th>在庫数</th>               
+                    <td>
+                      <%= @item.stock %>
+                    </td>
                 </tr>
                 <tr>
                   <th>販売ステータス</th>
