--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -77,6 +77,10 @@
             </li>
 
             <li class="nav-item">
+              <%= link_to '再入荷通知', admin_notifications_path, class: "nav_button" %>
+            </li>
+
+            <li class="nav-item">
               <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: "nav_button" %>
             </li>
 
