--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,6 +38,10 @@
             </li>
 
             <li class="nav-item">
+              <%= link_to '定期購入', subscriptions_path, class: "nav_button" %>
+            </li>
+
+            <li class="nav-item">
               <%= link_to 'カート', cart_items_path, class: "nav_button" %>
             </li>
 
@@ -78,6 +82,10 @@
 
             <li class="nav-item">
               <%= link_to '再入荷通知', admin_notifications_path, class: "nav_button" %>
+            </li>
+    
+            <li class="nav-item">
+              <%= link_to '定期購入', admin_subscriptions_path, class: "nav_button" %>
             </li>
 
             <li class="nav-item">
