--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -20,7 +20,12 @@
         <div class="form-group d-flex align-items-center">
           <%= f.label :amount, "数量", class: "mr-2" %>
           <%= f.select :amount, [['個数選択', '0'], *(1..30).map { |i| [i, i] }], {}, class: "form-control w-auto" %>
-          <%= f.submit "カートに入れる", class: "btn btn-success ml-3" %>
+          <% if @item.stock > 0 %>
+            <%= f.submit "カートに入れる", class: "btn btn-success ml-3 mr-3" %>
+            <%= link_to "定期購入する", new_subscription_path(item_id: @item.id), class: "btn btn-success" %>
+          <% else %>
+            <p class="text-danger">売り切れ中</p>
+          <% end %>
         </div>
       <% end %>
 
