--- a/app/views/admin/coupons/index.html.erb
+++ b/app/views/admin/coupons/index.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-3">
     <div class="col-lg-12">
       <table class="table">
         <thead>
