--- a/app/views/public/subscriptions/index.html.erb
+++ b/app/views/public/subscriptions/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row" style="margin: 20px;">
     <div class="col-lg-12 d-flex align-items-center justify-content-between">
       <div class="title-background" style="background-color: #f0f0f0; padding: 0px 20px; border-radius: 4px;">
-        <h4 style="margin: 0;"><h4>全商品の定期購入一覧</h4>
+        <h4 style="margin: 0;"><h4>定期購入一覧</h4>
       </div>
     </div>
   </div>
