--- a/app/views/public/subscriptions/edit.html.erb
+++ b/app/views/public/subscriptions/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>Public::Subscriptions#edit</h1>
-<p>Find me in app/views/public/subscriptions/edit.html.erb</p>
+<div class="container">
+  <div class="row" style="margin: 20px;">
+    <div class="col-lg-12 d-flex align-items-center justify-content-between">
+      <div class="title-background" style="background-color: #f0f0f0; padding: 0px 20px; border-radius: 4px;">
+        <h4 style="margin: 0;"><h4>定期購入の編集</h4>
+      </div>
+    </div>
+  </div>
+
+  <%= form_with model: [@item, @subscription], local: true do |f| %>
+    <div class="form-group">
+      <%= f.label :quantity, "数量" %>
+      <%= f.number_field :quantity, min: 1, class: "form-control", value: @subscription.quantity %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :interval_days, "お届け間隔（日数）" %>
+      <%= f.number_field :interval_days, min: 1, class: "form-control", value: @subscription.interval_days %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :next_delivery_date, "次回お届け予定日" %><br>
+      <%= @subscription.next_delivery_date %>
+    </div>
+
+    <div class="form-group mt-3">
+      <%= f.submit "更新する", class: "btn btn-primary" %>
+      <%= link_to "戻る", subscriptions_path, class: "btn btn-secondary ml-2" %>
+    </div>
+  <% end %>
+</div>  
