--- a/app/views/public/subscriptions/index.html.erb
+++ b/app/views/public/subscriptions/index.html.erb
@@ -28,8 +28,8 @@
           <td><%= sub.status %></td>
           <td>
             <% if sub.status == "active" %>
-              <%= link_to "編集する", edit_item_subscription_path(@item, subscription), class: "btn btn-success mr-2" %>
-              <%= link_to "解約する", cancel_item_subscription_path(@item, subscription), method: :patch, data: { confirm: "本当に解約しますか？" }, class: "btn btn-danger" %>
+              <%= link_to "編集する", edit_item_subscription_path(sub.item, sub), class: "btn btn-success mr-2" %>
+              <%= link_to "解約する", cancel_item_subscription_path(sub.item, sub), method: :patch, data: { confirm: "本当に解約しますか？" }, class: "btn btn-danger" %>
             <% end %>
           </td>
         </tr>
