--- a/app/views/admin/subscriptions/show.html.erb
+++ b/app/views/admin/subscriptions/show.html.erb
@@ -19,6 +19,10 @@
           <td><%= @subscription.item.name %></td>
         </tr>
         <tr>
+          <th>数量</th>
+          <td><%= @subscription.quantity %></td>
+        </tr>
+        <tr>
           <th>商品画像</th>
           <td><%= image_tag @subscription.item.get_image(150, 150) if @subscription.item.image.attached? %></td>
         </tr>
@@ -33,6 +37,7 @@
       </table>
 
       <div class="mt-3">
+        <%= link_to "編集する", edit_admin_subscription_path(@subscription), class: "btn btn-success" %>
         <%= link_to "一覧に戻る", admin_subscriptions_path, class: "btn btn-secondary" %>
         <%= link_to "削除する", admin_subscription_path(@subscription), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger" %>
       </div>
