--- a/app/views/admin/subscriptions/edit.html.erb
+++ b/app/views/admin/subscriptions/edit.html.erb
@@ -30,7 +30,7 @@
           <tr>
             <th>ステータス</th>
             <td>
-              <%= f.select :status, [["active"], ["canceled"]], {}, class: "form-control" %>
+              <%= f.select :status, [["有効", "active"], ["解約済み", "canceled"]], {}, class: "form-control" %>
             </td>
           </tr>
         </table>
