--- a/app/views/admin/subscriptions/index.html.erb
+++ b/app/views/admin/subscriptions/index.html.erb
@@ -25,7 +25,7 @@
                   <td><%= subscription.item.name %></td>
                   <td><%= subscription.quantity %></td>                  
                   <td><%= subscription.next_delivery_date %></td>
-                  <td><%= subscription.status %></td>
+                  <td><%= subscription.status_i18n %></td>
                   <td><%= link_to "詳細", admin_subscription_path(subscription) %></td>
                 </tr>
               <% end %>
