--- a/app/views/admin/subscriptions/show.html.erb
+++ b/app/views/admin/subscriptions/show.html.erb
@@ -32,7 +32,7 @@
         </tr>
         <tr>
           <th>ステータス</th>
-          <td><%= @subscription.status %></td>
+          <td><%= @subscription.status_i18n %></td>
         </tr>
       </table>
 
